# kiv-ppr

./: README.md
doc/: cfd.drawio.xml  doc.tex
doc/drawio/: dfd.drawio.xml
poc/: .gitignore  BufferedReader.cpp  BufferedReader.h  CMakeLists.txt  bucketing.cpp  bucketing.h  bucketing_constants.h  bucketing_utils.cpp  bucketing_utils.h  double_utils.h  main.cpp  opencl_bucketing.cpp  opencl_bucketing.h  opencl_solution.cpp  opencl_solution.h  opencl_utils.cpp  opencl_utils.h  params.cpp  serial_bucketing.cpp  serial_solution.cpp  smp_bucketing.cpp  smp_bucketing.h  smp_solution.cpp  smp_solution.h  solution.cpp  solution.h  verifier.cpp  verifier.sh  watchdog.cpp
poc/opencl/: opencl_sources.h
pres/: pres.tex
src/: CMakeLists.txt  bucketing_constants.h  bucketing_utils.cpp  bucketing_utils.h  double_utils.h  main.cpp  opencl_bucketing.cpp  opencl_bucketing.h  opencl_solution.cpp  opencl_solution.h  opencl_utils.cpp  opencl_utils.h  params.cpp  params.h  serial_bucketing.h  serial_solution.cpp  serial_solution.h  single_bucketing.cpp  single_bucketing.h  single_solution.cpp  single_solution.h  smp_bucketing.cpp  smp_bucketing.h  smp_solution.cpp  smp_solution.h  solution.cpp  solution.h  verifier.cpp  verifier.sh  verifier_2.sh
src/bucketing/: bucketing_constants.h  bucketing_utils.cpp
src/naive/: naive.cpp
src/opencl/: opencl_bucketing.cpp  opencl_bucketing.h  opencl_solution.cpp  opencl_solution.h  opencl_sources.h  opencl_utils.cpp  opencl_utils.h
src/single/: single_bucketing.cpp  single_bucketing.h  single_solution.cpp  single_solution.h
src/smp/: smp_bucketing.cpp  smp_bucketing.h  smp_solution.cpp  smp_solution.h
src/utils/: watchdog.h
